# ghostclaw

./: .env.example  .gitignore  .npmignore  AGENTS.md  AGENT_CAPABILITIES_ARCHITECTURE.md  ARCHITECTURAL_ANALYSIS.md  BACKEND_ARCHITECTURE_BLUEPRINT.md  CHANGELOG.md  CHANGELOG.v0.2.0-alpha.md  CLI_VS_SERVICE_DECISION.md  CONTRIBUTING.md  DRAFT-v0.1.9.md  INTERACTIVE_AGENT_ARCHITECTURE.md  KNOWLEDGE_DB_ARCHITECTURE.md  LICENSE  MIGRATION_GUIDE.md  MISSION_CONTROL_ARCHITECTURE.md  ORCHESTRATOR_TESTING_SUMMARY.md  PHASE0_ISSUES.md  PHASE1_PROGRESS.md  PROJECT_SYMBOLS.md  README.md  README.md.bak  REFACTOR_MONOLITH.md  REVIEW.md  REVIEW_FRONEND.md  SECURITY.md  SKILL.md  TASK.md  TIMING-ANALYSIS.md  TODO.md  UNIFIED_ARCHITECTURE_BLUEPRINT.md  V0.1.9-REFACTORING-PLAN.md  cleanup_processes.sh  monitor.sh  package.json  phase7.md  pr_comment.txt  pyproject.toml  quick_diagnostic.sh  (+6 more)
.codesandbox/: prebuild.sh  tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.drafts/: DRAFT-v0.1.10.md
.github/workflows/: aderyn.yml  ci.yml  main.yml  release-pypi.yml  release-testpypi.yml  release.yml
benchmark_qmd_db/: qmd.db
benchmarks/: benchmark_ai_buff.py  benchmark_bm25.py
cli/: compare.py  ghostclaw.py  watcher.py
core/: ai_codeindex_wrapper.py  analyzer.py  cache.py  coupling.py  detector.py  node_coupling.py  pyscn_wrapper.py  validator.py
docs/: ARCHITECTURE.md  GUIDE.md  HOWTOUSE.md  INTEGRATION.md  LINUX_DAEMON.md  ORCHESTRATOR.md  ROADMAP_LOGIRE_AI.md  TASK_ORCHESTRATOR.md  TROUBLESHOOT.md
docs/examples/: delta-analysis.md
examples/: MCP_CLIENTS.md  global_config.json
examples/orchestrator-demo/: README.md  run.sh
examples/orchestrator-demo/sample_project/: PROJECT_SYMBOLS.md  app.py
examples/orchestrator-demo/sample_project/services/: audit.py
examples/orchestrator-demo/sample_project/utils/: config.py  logger.py
ghostclaw_mcp/: server.py
lib/: cache.py
sample_repo/: README.md  sample.py
scripts/: compare.py  compare.sh  ghostclaw  ghostclaw.service  ghostclaw.sh  install.sh  repos.txt  seed_supabase.py  watcher
scripts/core/: validator.py
scripts/lib/: cache.py  notify.py
skill/ghostclaw/: README.md  package.json
skill/ghostclaw/cli/: ghostclaw.py  watcher.py
skill/ghostclaw/core/: validator.py
skill/ghostclaw/stacks/: node.py  python.py
skill/ghostclaw/tests/integration/: test_analyzer.py
skill/ghostclaw/tests/unit/: test_cache.py
src/ghostclaw/: version.py
src/ghostclaw/cli/: __init__.py  commander.py  compare.py  formatters.py  ghostclaw.py  services.py  watcher.py
src/ghostclaw/cli/commander/: __init__.py  base.py  registry.py
src/ghostclaw/cli/commands/: analyze.py  bridge.py  debug.py  doctor.py  init.py  memory_stats.py  qmd_migrate.py  test.py  update.py
src/ghostclaw/cli/commands/analyze/: __init__.py  utils.py
src/ghostclaw/cli/commands/debug/: __init__.py  commands.py  console.py  session.py
src/ghostclaw/cli/commands/plugins/: __init__.py  add.py  base.py  disable.py  enable.py  (+6 more)
src/ghostclaw/cli/formatters/: base.py  json.py  markdown.py  terminal.py
src/ghostclaw/cli/services/: __init__.py  analyzer.py  analyzer_service.py  config.py  config_service.py  plugin.py  plugin_service.py  pr.py  pr_service.py
src/ghostclaw/core/: agent.py  analyzer.py  bridge.py  cache.py  config.py  context_builder.py  coupling.py  detector.py  diff_cache.py  git_utils.py  graph.py  llm_client.py  memory.py  metrics.py  migration.py  models.py  node_coupling.py  prefetch.py  qmd_store.py  score.py  validator.py  vector_store.py
src/ghostclaw/core/adapters/: base.py  hooks.py  registry.py
src/ghostclaw/core/agent_sdk/: __init__.py  agent_cli.py  agent_identity.py  agent_memory.py  agent_sdk.py  agent_session.py  agent_task_orchestrator.py  agent_telemetry.py  agent_workspace.py  config.py  models.py  serializers.py
src/ghostclaw/core/analyzer/: __init__.py  discovery.py  metrics.py  run.py  scoring.py  stacks.py
src/ghostclaw/core/llm_client/: __init__.py  providers.py  retry.py
src/ghostclaw/core/memory/: __init__.py  mcp.py  store.py
src/ghostclaw/core/qmd/: embeddings.py  fts.py  indexer.py  query_classifier.py  query_engine.py
src/ghostclaw/core/score/: __init__.py  engine.py
src/ghostclaw/core/vector_store/: __init__.py  cache.py  embedding.py  index.py
src/ghostclaw/lib/: cache.py  complexity.py  github.py  notify.py
src/ghostclaw/stacks/: __init__.py  docker.py  go.py  node.py  python.py  shell.py  typescript.py
src/ghostclaw_mcp/: server.py
tests/integration/: test_agent_sdk_integration.py  test_analyzer.py  test_logfire_live.py  test_memory_mcp.py  test_supabase_integration.py  test_telemetry_lifecycle.py
tests/unit/: test_adapters.py  test_agent.py  test_agent_cli.py  test_agent_identity.py  test_agent_memory.py  test_agent_sdk.py  test_agent_sdk_foundation.py  test_agent_session.py  test_agent_task_orchestrator.py  test_agent_telemetry.py  test_agent_workspace.py  test_ai_codeindex_adapter.py  test_ai_codeindex_wrapper.py  test_cache.py  test_cli.py  test_config.py  test_config_deep_merge.py  test_context_builder.py  test_coupling_node.py  test_coupling_python.py  test_detector.py  test_di.py  test_fingerprint_orchestrator.py  test_git_utils.py  test_go_docker_stack.py  test_json_output.py  test_json_target_adapter.py  test_llm_client.py  test_mcp.py  test_memory.py  test_mock_storage_adapter.py  test_orchestrator_cli.py  test_orchestrator_integration.py  test_plugins.py  test_pyscn_adapter.py  test_pyscn_wrapper.py  test_qmd_adapter.py  test_qmd_bm25.py  test_qmd_hybrid.py  test_qmd_plugin_filter.py  (+10 more)
tests/unit/cli/commander/: test_base.py  test_registry.py
tests/unit/cli/commands/: test_analyze_command.py  test_bridge_command.py  test_doctor_command.py  test_init_command.py  test_legacy_fallback.py  test_plugins_commands.py  test_test_command.py  test_update_command.py
tests/unit/cli/formatters/: test_base.py  test_json.py  test_markdown.py  test_terminal.py
tests/unit/cli/services/: test_analyzer_service.py  test_config_service.py  test_plugin_service.py  test_pr_service.py
(+14 files in other folders)
